[gd_scene load_steps=2 format=3 uid="uid://cmoxq4a4un30e"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 100
text = "IsDisATowerDefense"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="MainPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MainPanel/CenterContainer/MainButtons"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Settings" type="Button" parent="MainPanel/CenterContainer/MainButtons"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Credits" type="Button" parent="MainPanel/CenterContainer/MainButtons"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="Quit" type="Button" parent="MainPanel/CenterContainer/MainButtons"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="SavePanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SavePanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="SavePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Select Save"
horizontal_alignment = 1

[node name="Save1" type="Button" parent="SavePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Save 1"

[node name="Save2" type="Button" parent="SavePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Save 2"

[node name="Save3" type="Button" parent="SavePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Save 3"

[node name="BackButton" type="Button" parent="SavePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="RacePanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="RacePanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="RacePanel/MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Select Race"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RacePanel/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="RaceList" type="VBoxContainer" parent="RacePanel/MainVBox/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Race0" type="Button" parent="RacePanel/MainVBox/HBoxContainer/RaceList"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Humains"

[node name="Race1" type="Button" parent="RacePanel/MainVBox/HBoxContainer/RaceList"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Orcs"

[node name="Race2" type="Button" parent="RacePanel/MainVBox/HBoxContainer/RaceList"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Elfes"

[node name="Race3" type="Button" parent="RacePanel/MainVBox/HBoxContainer/RaceList"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Nains"

[node name="BonusPanel" type="PanelContainer" parent="RacePanel/MainVBox/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RacePanel/MainVBox/HBoxContainer/BonusPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BonusTitleLabel" type="Label" parent="RacePanel/MainVBox/HBoxContainer/BonusPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "Bonus"
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="RacePanel/MainVBox/HBoxContainer/BonusPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "Selectionnez une race
pour voir ses bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsHBox" type="HBoxContainer" parent="RacePanel/MainVBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="RacePanel/MainVBox/ButtonsHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 22
text = "Back"

[node name="Spacer" type="Control" parent="RacePanel/MainVBox/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartGameButton" type="Button" parent="RacePanel/MainVBox/ButtonsHBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "Start Game"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1

[node name="ResolutionLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="FullscreenCheck" type="CheckButton" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Fullscreen"

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="CreditsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Credits"
horizontal_alignment = 1

[node name="CreditsText" type="Label" parent="CreditsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Created with love by
MwonkeysGame"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"
